force-app/main/default/objects/LCRM_Account_Merge_UnMerge_Dup_Event__c/LCRM_Account_Merge_UnMerge_Dup_Event__c.object-meta.xml
<CustomObject>
    <description>This object in sfdc is to hold merge/unmerge/duplicate accounts details of GLI.</description>
    <label>Account Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>