force-app/main/default/objects/LCRM_Account_Merge_UnMerge_Dup_Event__c/fields/LCRM_Event_Raised_by__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Event_Raised_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>