force-app/main/default/objects/LCRM_Account_Merge_UnMerge_Dup_Event__c/fields/LCRM_GLI_Account_ID_1__c.field-meta.xml
<CustomField>
    <fullName>LCRM_GLI_Account_ID_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Account ID 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>