force-app/main/default/objects/LCRM_Account_Merge_UnMerge_Dup_Event__c/fields/Merged_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>